--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: ui-sans-serif, system-ui, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -40,80 +40,93 @@ body {
   width: min(100%, 500px);
 }
 
-button {
-  display: inline-block;
-  outline: none;
-  cursor: pointer;
-  border-radius: 3px;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 16px;
-  padding: 2px 16px;
-  height: 38px;
-  min-width: 96px;
-  min-height: 38px;
-  border: none;
-  color: #fff;
-  background-color: rgb(88, 101, 242);
-  transition: background-color 0.17s ease, color 0.17s ease;
+h1 {
+  text-align: center;
 }
 
-button:hover {
-  background-color: rgb(71, 82, 196);
+#start-button {
+  background-color: #10b981;
+  text-align: center;
+  cursor: pointer;
+  color: #fff;
+  font-weight: bold;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-radius: 0.25rem;
+  max-width: 150px;
+  width: 100%;
+  margin: auto;
+
+}
+
+#start-button:hover {
+  background-color: #047857;
+}
+
+
+h2 {
+  font-size: 18px;
+  font-weight: 400;
 }
 
 .answers {
   display: flex;
   flex-direction: column;
+  gap: 5px;
 }
 
-label {
-  padding: 12px;
-  display: block;
-  border: 2px solid #64748b;
-  border-radius: 4px;
-  margin: 4px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 14px;
-  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  font-family: monospace;
-  font-size: 24px;
+
+.answer-button {
+  outline: none;
+  cursor: pointer;
+  border: 1px solid black;
+  border-radius: 3px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
+  padding: 2px 2px;
+  height: 38px;
+  min-width: 96px;
+  min-height: 38px;
+  color: black;
+  background-color: white;
+  transition: background-color 0.17s ease, color 0.17s ease;
 }
 
-label:hover {
-  border-color: #646cff;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+.answer-button:hover {
+  background-color: lightgrey;
 }
 
-label:has(:checked) {
-  background-color: #646cff50;
-  border-color: #646cff;
+.correct-answer {
+  outline: none;
+  cursor: pointer;
+  border: 1px solid black;
+  border-radius: 3px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16px;
+  padding: 2px 2px;
+  height: 38px;
+  min-width: 96px;
+  min-height: 38px;
+  color: white;
+  background-color: #10b981;
 }
 
-progress {
-  width: 100%;
-}
-
-.correct {
-  background-color: #bbf7d0 !important;
-}
-
-.incorrect {
-  background-color: #fecaca !important;
-}
-
-.big-title {
-  font-size: 64px;
-  color: red;
-}
-
-.js {
-  background: yellow;
-  display: inline-block;
-  padding-left: 6px;
-  margin-left: -6px;
-  padding-right: 6px;
-  margin-right: -6px;
+.wrong-answer {
+  outline: none;
+  cursor: pointer;
+  border: 1px solid black;
+  border-radius: 3px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16px;
+  padding: 2px 2px;
+  height: 38px;
+  min-width: 96px;
+  min-height: 38px;
+  color: white;
+  background-color: #ef4444;
 }
