--- a/style.css
+++ b/style.css
@@ -40,6 +40,23 @@ body {
   width: min(100%, 500px);
 }
 
+.progress-bar {
+  width: 100%;
+  height: 8px;
+  background-color: #A7F3D0;
+  overflow: hidden;
+  border-radius: 9999px;
+  margin-bottom: 4px;
+
+}
+
+.status-bar {
+  height: 8px;
+  background-color: #10b981;
+  width: 0%;
+
+}
+
 h1 {
   text-align: center;
 }
